tests/ui/fail_invalid_threshold.rs
use hemera::hemera;

// Invalid threshold format
#[hemera(threshold = "invalid")]
fn invalid_threshold() {}

fn main() {}
